--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ body {
     background-size: 100% auto;
     background-position: top center;
     background-color: #121214;
-    color: white;;
+    color: white;
 }
